--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,144 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./assets/scss/base";
+
+//  ******  INITIAL STATE  *********
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62, 5%; // 10px / 16px = 62.5% -> 1rem = 10px
+
+  @media only screen and (max-width: $bp-3xl) {
+    font-size: 75%;
+  }
+
+  @media only screen and (max-width: $bp-2xl) {
+    font-size: 60%;
+  }
+
+  @media only screen and (max-width: $bp-xl) {
+    font-size: 50%;
+  }
+}
+
+body {
+  font-family: $font-primary;
+  color: $color-grey-dark-2;
+  font-weight: 300;
+  line-height: 1.6;
+}
+
+// **********************************************************************
+
+.container {
+  display: grid;
+
+  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(
+      6rem,
+      1fr
+    ) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(
+      6rem,
+      1fr
+    ) [full-end];
+
+  @media only screen and (max-width: $bp-3m) {
+    grid-template-rows: 6em 80vh min-content 40vw repeat(3, min-content);
+
+    grid-template-columns: 
+        [full-start] minmax(6rem,1fr) 
+        [center-start] repeat(8,[col-start] minmax(min-content, 14rem) [col-end]) 
+        [center-end] minmax(6rem, 1fr) [full-end];
+  }
+
+  @media only screen and (max-width: $bp-2m) {
+    grid-template-rows: 6em calc(100vh - 6rem);
+
+  }
+
+}
+
+%heading {
+  font-family: $font-display;
+  font-weight: 400;
+}
+
+.heading-1 {
+  @extend %heading;
+  font-size: 4.5rem;
+  color: $color-grey-light-1;
+  line-height: 1;
+}
+
+.heading-2 {
+  @extend %heading;
+  font-size: 4rem;
+  font-style: italic;
+  line-height: 1;
+
+  &--light {
+    color: $color-grey-light-1;
+  }
+
+  &--dark {
+    color: $color-grey-dark-1;
+  }
+}
+
+.heading-3 {
+  @extend %heading;
+  font-size: 1.6rem;
+  color: $color-primary;
+  text-transform: uppercase;
+}
+
+.heading-4 {
+  @extend %heading;
+  font-size: 1.9rem;
+
+  &--light {
+    color: $color-grey-light-1;
+  }
+
+  &--dark {
+    color: $color-grey-dark-1;
+  }
+}
+
+.btn {
+  background-color: $color-primary;
+  color: $color-white;
+  border: none;
+  border-radius: 0;
+  font-family: $font-display;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  padding: 1.8rem 3rem;
+  cursor: pointer;
+  transition: all 0.3s;
+
+  &:hover {
+    background-color: $color-primary-dark;
+  }
+}
+
+.mb-sm {
+  margin-bottom: 2rem;
+}
+
+.mb-md {
+  margin-bottom: 3rem;
+}
+
+.mb-lg {
+  margin-bottom: 4rem;
+}
+
+.mb-hg {
+  margin-bottom: 8rem;
+}
