--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@
 
 html {
   box-sizing: border-box;
-  font-size: 62, 5%; // 10px / 16px = 62.5% -> 1rem = 10px
+  font-size: 62.5%; // 10px / 16px = 62.5% -> 1rem = 10px
 
   @media only screen and (max-width: $bp-3xl) {
     font-size: 75%;
